Horizontail overflow issue fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,7 @@ body {
 /* Qualifications */
 #qual{
     padding: 3rem 0;
+    overflow-x: hidden;
 }
 #qual .stepper-container {
     display: flex;
@@ -143,6 +144,7 @@ body {
     padding-right: 4rem;
     width: 100%;
     position: relative;
+    overflow: visible;
     background: var(--bs-white);
 }
 
@@ -228,7 +230,11 @@ body {
     }
 
 }
-
+@media(max-width: 425px) {
+    #qual .btn{
+        transform: scale(0.9);
+    }
+}
 #educ-container,
 #work-container{
     transition: 0.5s;
